--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_companyAttched_dlg.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_companyAttched_dlg.form
@@ -441,17 +441,19 @@ button2_click:function($event){
 
 buttonA1_click:function($event){
 	var uur = $params.URL1.url;
-	$img_view = $(&quot;&lt;img/>&quot;);
+	/*$img_view = $(&quot;&lt;img/>&quot;);
 	$img_view.attr(&quot;src&quot;,uur);
-	$('#img_id').empty().append($img_view);
+	$('#img_id').empty().append($img_view);*/
+	$('#img_id').empty().attr(&quot;src&quot;,uur);
 	$view.divView.toggle();
 },
 
 buttonA2_click:function($event){
 	var uur = $params.URL2.url;
-	$img_view = $(&quot;&lt;img/>&quot;);
+	/*$img_view = $(&quot;&lt;img/>&quot;);
 	$img_view.attr(&quot;src&quot;,uur);
-	$('#img_id').empty().append($img_view);
+	$('#img_id').empty().append($img_view);*/
+	$('#img_id').empty().attr(&quot;src&quot;,uur);
 	$view.divView.toggle();
 },
 
@@ -460,6 +462,6 @@ page_onload:function(){
 }</form:scripts>
   <form:htmls>
 &lt;script type=&quot;text/ng-template&quot; id=&quot;divView_html&quot;>
-	&lt;div id=&quot;img_id&quot;>&lt;/div>
+	&lt;img id=&quot;img_id&quot; height=&quot;240&quot; width=&quot;320&quot; />
 &lt;/script></form:htmls>
 </form:Form>
