--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_getCompanyFile.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_getCompanyFile.form
@@ -8,6 +8,10 @@
         </dync:render>
         <dync:children/>
       </dync:attribute>
+      <dync:attribute default="" group="HTML" id="width" name="页面宽度" value="80%">
+        <dync:render colSpan="2" height="0" multi="false" name="text"/>
+        <dync:children/>
+      </dync:attribute>
     </form:attributes>
   </form:control>
   <form:child xsi:type="form:Group" id="widgetbox" name="附件一览表">
