--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_getInterLine_dlg.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_getInterLine_dlg.form
@@ -8,7 +8,7 @@
         </dync:render>
         <dync:children/>
       </dync:attribute>
-      <dync:attribute default="" group="HTML" id="width" name="页面宽度" value="50%">
+      <dync:attribute default="" group="HTML" id="width" name="页面宽度" value="80%">
         <dync:render colSpan="2" height="0" multi="false" name="text"/>
         <dync:children/>
       </dync:attribute>
@@ -51,25 +51,45 @@
         </form:control>
         <form:child xsi:type="form:Field" binding="start_city" id="start_city" name="起运地" customize="true">
           <form:control type="widget/col_jqgrid">
-            <form:attributes source="widget/col_jqgrid"/>
+            <form:attributes source="widget/col_jqgrid">
+              <dync:attribute default="false" group="基本设置" id="title" name="鼠标悬浮显示" value="true">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
+            </form:attributes>
           </form:control>
           <form:validation/>
         </form:child>
         <form:child xsi:type="form:Field" binding="dest_province" id="dest_province" name="目的省份" customize="true">
           <form:control type="widget/col_jqgrid">
-            <form:attributes source="widget/col_jqgrid"/>
+            <form:attributes source="widget/col_jqgrid">
+              <dync:attribute default="false" group="基本设置" id="title" name="鼠标悬浮显示" value="true">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
+            </form:attributes>
           </form:control>
           <form:validation/>
         </form:child>
         <form:child xsi:type="form:Field" binding="qty" id="qty" name="意向台数" customize="true">
           <form:control type="widget/col_jqgrid">
-            <form:attributes source="widget/col_jqgrid"/>
+            <form:attributes source="widget/col_jqgrid">
+              <dync:attribute default="false" group="基本设置" id="title" name="鼠标悬浮显示" value="true">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
+            </form:attributes>
           </form:control>
           <form:validation/>
         </form:child>
         <form:child xsi:type="form:Field" binding="price" id="price" name="意向价格" customize="true">
           <form:control type="widget/col_jqgrid">
-            <form:attributes source="widget/col_jqgrid"/>
+            <form:attributes source="widget/col_jqgrid">
+              <dync:attribute default="false" group="基本设置" id="title" name="鼠标悬浮显示" value="true">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
+            </form:attributes>
           </form:control>
           <form:validation/>
         </form:child>
@@ -77,6 +97,10 @@
           <form:control type="widget/col_jqgrid">
             <form:attributes source="widget/col_jqgrid">
               <dync:attribute default="false" group="表格设置" id="hidden" name="隐藏列" value="true">
+                <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+                <dync:children/>
+              </dync:attribute>
+              <dync:attribute default="false" group="基本设置" id="title" name="鼠标悬浮显示" value="true">
                 <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
                 <dync:children/>
               </dync:attribute>
