--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_supplierApplay.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_supplierApplay.form
@@ -30,7 +30,7 @@
         <dync:render/>
         <dync:children/>
       </dync:attribute>
-      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="">
+      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="page_beforeDataSourceLoad($params)">
         <dync:render/>
         <dync:children/>
       </dync:attribute>
@@ -1823,6 +1823,7 @@ print:function(rowObject){
 	var viewPath = i+&quot;pathView&quot;;
 	Modal.open(&quot;f/accountFileUp&quot;,{},function(id){
 		$(&quot;#&quot;+pathid).text(id);
+		if(id!=null)
 		$(&quot;#&quot;+viewPath).text(&quot;已上传&quot;);
 	});
 },
@@ -1872,6 +1873,19 @@ buttonAddLinkman_click:function(rowId,rowData,tableData){
 fileUpPath_customFormatter:function(cellvalue,options,rowObject,dictValueExpression){
 	var i = rowObject.lineid
 	return '&lt;span id=&quot;'+i+'pathView&quot;>'+&quot;未上传&quot;+'&lt;/span>'
+},
+
+page_beforeDataSourceLoad:function($params){
+	 var w=window.parent.document.getElementsByTagName(&quot;div&quot;);
+  var $w=$(w);
+  var $thisIf = $(window.parent.document.getElementsByTagName(&quot;iframe&quot;));
+  $thisIf.each(function(index, el) {
+    var strsrc = $(this).attr('src');
+    if (strsrc.indexOf('tps/') != -1) {
+        console.log('find');
+        $(this).parent().parent().attr('style','padding-top:0px !important;');
+      }
+  });	
 }</form:scripts>
   <form:htmls>&lt;script type=&quot;text/ng-template&quot; id=&quot;div1_html&quot;>
 *
