--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_auditcertific.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_auditcertific.form
@@ -1,7 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <form:Form xmi:version="2.0" xmlns:xmi="http://www.omg.org/XMI" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:dync="http://www.chinacreator.com/platform/mvc/ui/dync" xmlns:form="http://www.chinacreator.com/platform/mvc/form" name="分供方初步认证个人认证页面" sn="auditCertificDriver" type="form">
-  <form:control type="page/normal">
-    <form:attributes source="page/normal">
+  <form:control type="page/modal">
+    <form:attributes source="page/modal">
+      <dync:attribute default="" group="HTML" id="width" name="页面宽度" value="80%">
+        <dync:render colSpan="2" height="0" multi="false" name="text"/>
+        <dync:children/>
+      </dync:attribute>
       <dync:attribute default="" group="事件" id="onload" name="页面加载完成" value="page_onload()">
         <dync:render colSpan="2" height="0" multi="false" name="event">
           <dync:item name="param" value=""/>
@@ -792,7 +796,12 @@
       </form:child>
       <form:child xsi:type="form:Field" binding="accountFilepath" id="accountFilepath" name="银行账号照片">
         <form:control type="widget/col_jqgrid">
-          <form:attributes source="widget/col_jqgrid"/>
+          <form:attributes source="widget/col_jqgrid">
+            <dync:attribute default="false" group="表格设置" id="hidden" name="隐藏列" value="true">
+              <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+              <dync:children/>
+            </dync:attribute>
+          </form:attributes>
         </form:control>
       </form:child>
       <form:child xsi:type="form:Field" binding="ownerName" id="ownerName" name="开户人">
@@ -1217,9 +1226,9 @@ button1_click:function($event){
 },
 
 page_onload:function(){
-	var shippperid=window.parent.angular.element(&quot;#indexConScope&quot;).scope().shippperid;
-	$params.shippperid = shippperid;
-	//$params.shippperid = $params.lineId;
+	//var shippperid=window.parent.angular.element(&quot;#indexConScope&quot;).scope().shippperid;
+	//$params.shippperid = shippperid;
+	$params.shippperid = $params.lineId;
 	var cityName=functions.getCityName($params.shippperid.cityid);
 	$params.carNumber=$params.shippperid.carNumber;
 	$params.driverName=$params.shippperid.driverName;
