--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_checkdocument.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_checkdocument.form
@@ -8,6 +8,12 @@
         </dync:render>
         <dync:children/>
       </dync:attribute>
+      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="page_beforeDataSourceLoad($params)">
+        <dync:render colSpan="2" height="0" multi="false" name="event">
+          <dync:item name="param" value="$params"/>
+        </dync:render>
+        <dync:children/>
+      </dync:attribute>
     </form:attributes>
   </form:control>
   <form:child xsi:type="form:Group" id="widgetbox" name="规范操作考核数据录入">
@@ -805,6 +811,19 @@ button1_click:function($event){
 buttonClose_click:function($event){
 	//Modal.instance.close();
 	$view.mainForm.clean();
+},
+
+page_beforeDataSourceLoad:function($params){
+	 var w=window.parent.document.getElementsByTagName(&quot;div&quot;);
+  var $w=$(w);
+  var $thisIf = $(window.parent.document.getElementsByTagName(&quot;iframe&quot;));
+  $thisIf.each(function(index, el) {
+    var strsrc = $(this).attr('src');
+    if (strsrc.indexOf('tps/') != -1) {
+        console.log('find');
+        $(this).parent().parent().attr('style','padding-top:0px !important;');
+      }
+  });	
 }</form:scripts>
   <form:htmls>&lt;script type=&quot;text/ng-template&quot; id=&quot;div10_html&quot;>
 	&lt;button id=&quot;savebtn&quot; class=&quot;mymenu&quot; onfocus=&quot;this.blur()&quot; ng-click=&quot;functions.saveData()&quot;> &#xD;
