--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_checkhead.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_checkhead.form
@@ -30,7 +30,7 @@
         <dync:render/>
         <dync:children/>
       </dync:attribute>
-      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="">
+      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="page_beforeDataSourceLoad($params)">
         <dync:render/>
         <dync:children/>
       </dync:attribute>
@@ -982,6 +982,19 @@ createCheckHead:function(){
 		Messenger.post({message:&quot;所选记录并无需要生的考核单的&quot;,type:&quot;info&quot;,hideAfter:2,showCloseButton:true});
 		}	
 	}
+},
+
+page_beforeDataSourceLoad:function($params){
+	 var w=window.parent.document.getElementsByTagName(&quot;div&quot;);
+  var $w=$(w);
+  var $thisIf = $(window.parent.document.getElementsByTagName(&quot;iframe&quot;));
+  $thisIf.each(function(index, el) {
+    var strsrc = $(this).attr('src');
+    if (strsrc.indexOf('tps/') != -1) {
+        console.log('find');
+        $(this).parent().parent().attr('style','padding-top:0px !important;');
+      }
+  });	
 }</form:scripts>
   <form:htmls>
 &lt;script type=&quot;text/ng-template&quot; id=&quot;div_html&quot;>
