--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_companyApplay.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_companyApplay.form
@@ -26,7 +26,7 @@
         <dync:render/>
         <dync:children/>
       </dync:attribute>
-      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="">
+      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="page_beforeDataSourceLoad($params)">
         <dync:render/>
         <dync:children/>
       </dync:attribute>
@@ -1283,6 +1283,10 @@
               <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
               <dync:children/>
             </dync:attribute>
+            <dync:attribute default="false" group="表格设置" id="hidden" name="隐藏列" value="true">
+              <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+              <dync:children/>
+            </dync:attribute>
           </form:attributes>
         </form:control>
       </form:child>
@@ -1951,7 +1955,8 @@ print:function(rowObject){
 	var viewPath = i+&quot;pathView&quot;;
 	Modal.open(&quot;f/accountFileUp&quot;,{},function(id){
 		$(&quot;#&quot;+pathid).text(id);
-		$(&quot;#&quot;+viewPath).text(id)
+		if(id!=null)
+		$(&quot;#&quot;+viewPath).text(&quot;已上传&quot;)
 	});
 	
 	//alert($(&quot;#&quot;+pathid).val());
@@ -1992,6 +1997,19 @@ buttonAroad_click:function($event){
 fileUpPath_customFormatter:function(cellvalue,options,rowObject,dictValueExpression){
 	var i = rowObject.lineid
 	return '&lt;span id=&quot;'+i+'pathView&quot;>'+&quot;未上传&quot;+'&lt;/span>'
+},
+
+page_beforeDataSourceLoad:function($params){
+	 var w=window.parent.document.getElementsByTagName(&quot;div&quot;);
+  var $w=$(w);
+  var $thisIf = $(window.parent.document.getElementsByTagName(&quot;iframe&quot;));
+  $thisIf.each(function(index, el) {
+    var strsrc = $(this).attr('src');
+    if (strsrc.indexOf('tps/') != -1) {
+        console.log('find');
+        $(this).parent().parent().attr('style','padding-top:0px !important;');
+      }
+  });	
 }</form:scripts>
   <form:htmls>
 &lt;script type=&quot;text/ng-template&quot; id=&quot;div1_html&quot;>
