--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_companyAttched_dlg.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_companyAttched_dlg.form
@@ -357,15 +357,19 @@
       </form:child>
     </form:child>
   </form:child>
-  <form:child xsi:type="form:Group" id="divView" name="简单容器(DIV)">
+  <form:child xsi:type="form:Group" id="divView1" name="简单容器(DIV)">
     <form:control type="container/div">
       <form:attributes source="container/div">
-        <dync:attribute default="" group="高级自定义" id="html" name="自定义HTML" value="divView_html">
-          <dync:render colSpan="2" height="0" multi="false" name="html"/>
-          <dync:children/>
-        </dync:attribute>
         <dync:attribute default="" group="高级自定义" id="style" name="自定义style" value="text-align:center;">
           <dync:render colSpan="2" height="0" multi="false" name="text"/>
+          <dync:children/>
+        </dync:attribute>
+        <dync:attribute default="" group="HTML配置" id="collapse" name="隐藏" value="true">
+          <dync:render colSpan="2" height="0" multi="false" name="text"/>
+          <dync:children/>
+        </dync:attribute>
+        <dync:attribute default="" group="高级自定义" id="html" name="自定义HTML" value="divView1_html">
+          <dync:render colSpan="2" height="0" multi="false" name="html"/>
           <dync:children/>
         </dync:attribute>
       </form:attributes>
@@ -407,7 +411,7 @@ fileInputIframe_onSuccess:function(data){
 },
 
 fileInputIframe_onError:function(data){
-	Messenger.post({message:&quot;文件上传失败!&quot;,type:&quot;error&quot;,hideAfter:2,showCloseButton:true});	
+	Messenger.post({message:&quot;文件加载失败，请重新加载!&quot;,type:&quot;error&quot;,hideAfter:2,showCloseButton:true});	
 },
 
 fileInputIframe1_onSuccess:function(data){
@@ -416,26 +420,34 @@ fileInputIframe1_onSuccess:function(data){
 },
 
 fileInputIframe1_onError:function(data){
-	Messenger.post({message:&quot;文件上传失败!&quot;,type:&quot;error&quot;,hideAfter:2,showCloseButton:true});	
+	Messenger.post({message:&quot;文件加载失败，请重新加载!&quot;,type:&quot;error&quot;,hideAfter:2,showCloseButton:true});	
 },
 
 button1_click:function($event){
 	Messenger.post({message:&quot;正在上传，请稍后!&quot;,type:&quot;info&quot;,hideAfter:2,showCloseButton:true});
+	if($params.URL1 == null || $params.URL1 == undefined){
+		Messenger.post({message:&quot;文件上传失败!&quot;,type:&quot;error&quot;,hideAfter:2,showCloseButton:true});
+		return;
+	}
 	var data1 = $params.URL1;
 	$http.post(&quot;ws/s_addFileBuss&quot;,{&quot;data&quot;:data1,&quot;id&quot;:$params.info})
 		.success(function(data){
 		Messenger.post({message:&quot;文件上传成功!&quot;,type:&quot;success&quot;,hideAfter:2,showCloseButton:true});
-		Modal.instance.close();
+		//Modal.instance.close();
 		});	
 },
 
 button2_click:function($event){
 	Messenger.post({message:&quot;正在上传，请稍后!&quot;,type:&quot;info&quot;,hideAfter:2,showCloseButton:true});
 	var data2 = $params.URL2;
+	if(data2 == null || data2 == undefined){
+		Messenger.post({message:&quot;文件上传失败!&quot;,type:&quot;error&quot;,hideAfter:2,showCloseButton:true});
+		return;
+	}
 	$http.post(&quot;ws/s_addFileTrans&quot;,{&quot;data&quot;:data2,&quot;id&quot;:$params.info})
 		.success(function(data){
 		Messenger.post({message:&quot;文件上传成功!&quot;,type:&quot;success&quot;,hideAfter:2,showCloseButton:true});
-		Modal.instance.close();
+		//Modal.instance.close();
 		});
 },
 
@@ -443,25 +455,25 @@ buttonA1_click:function($event){
 	var uur = $params.URL1.url;
 	/*$img_view = $(&quot;&lt;img/>&quot;);
 	$img_view.attr(&quot;src&quot;,uur);
-	$('#img_id').empty().append($img_view);*/
-	$('#img_id').empty().attr(&quot;src&quot;,uur);
-	$view.divView.toggle();
+	$('#img_id1').empty().append($img_view);*/
+	$('#img_id1').empty().attr(&quot;src&quot;,uur);
+	$view.divView1.toggle();
 },
 
 buttonA2_click:function($event){
 	var uur = $params.URL2.url;
 	/*$img_view = $(&quot;&lt;img/>&quot;);
 	$img_view.attr(&quot;src&quot;,uur);
-	$('#img_id').empty().append($img_view);*/
-	$('#img_id').empty().attr(&quot;src&quot;,uur);
-	$view.divView.toggle();
+	$('#img_id1').empty().append($img_view);*/
+	$('#img_id1').empty().attr(&quot;src&quot;,uur);
+	$view.divView1.toggle();
 },
 
 page_onload:function(){
-	$view.divView.toggle();
+	//$view.divView1.toggle();
 }</form:scripts>
   <form:htmls>
-&lt;script type=&quot;text/ng-template&quot; id=&quot;divView_html&quot;>
-	&lt;img id=&quot;img_id&quot; height=&quot;240&quot; width=&quot;320&quot; />
+&lt;script type=&quot;text/ng-template&quot; id=&quot;divView1_html&quot;>
+	&lt;img id=&quot;img_id1&quot; height=&quot;240&quot; width=&quot;320&quot; />
 &lt;/script></form:htmls>
 </form:Form>
