--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_driverAttched_dlg.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_driverAttched_dlg.form
@@ -270,14 +270,18 @@
       </form:child>
     </form:child>
   </form:child>
-  <form:child xsi:type="form:Group" id="divView" name="简单容器(DIV)">
+  <form:child xsi:type="form:Group" id="divView1" name="简单容器(DIV)">
     <form:control type="container/div">
       <form:attributes source="container/div">
-        <dync:attribute default="" group="高级自定义" id="html" name="自定义HTML" value="divView_html">
+        <dync:attribute default="" group="高级自定义" id="style" name="自定义style" value="text-align:center;">
+          <dync:render colSpan="2" height="0" multi="false" name="text"/>
+          <dync:children/>
+        </dync:attribute>
+        <dync:attribute default="" group="高级自定义" id="html" name="自定义HTML" value="divView1_html">
           <dync:render colSpan="2" height="0" multi="false" name="html"/>
           <dync:children/>
         </dync:attribute>
-        <dync:attribute default="" group="高级自定义" id="style" name="自定义style" value="text-align:center;">
+        <dync:attribute default="" group="HTML配置" id="collapse" name="隐藏" value="true">
           <dync:render colSpan="2" height="0" multi="false" name="text"/>
           <dync:children/>
         </dync:attribute>
@@ -292,7 +296,7 @@
   <form:scripts>
 
 page_onload:function(){
-	$view.divView.toggle();
+	//$view.divView1.toggle();
 },
 
 fileUpload_onSuccess:function(data){
@@ -319,6 +323,10 @@ button22_click:function($event){
 buttonUp_click:function($event){
 	Messenger.post({message:&quot;正在上传，请稍后!&quot;,type:&quot;info&quot;,hideAfter:2,showCloseButton:true});
 	var data = $params.URL;
+	if(data== null||data == undefined){
+		Messenger.post({message:&quot;文件上传失败!&quot;,type:&quot;error&quot;,hideAfter:2,showCloseButton:true});
+		return;
+	}
 	$http.post(&quot;ws/s_driverAttached&quot;,{&quot;mapList&quot;:data,&quot;id&quot;:$params.info})
 		.success(function(data){
 		Messenger.post({message:&quot;文件上传成功!&quot;,type:&quot;success&quot;,hideAfter:2,showCloseButton:true});
@@ -332,18 +340,18 @@ fileInputIframe_onSuccess:function(data){
 },
 
 fileInputIframe_onError:function(data){
-	Messenger.post({message:&quot;文件上传失败!&quot;,type:&quot;error&quot;,hideAfter:2,showCloseButton:true});	
+	Messenger.post({message:&quot;文件加载失败，请重新加载!&quot;,type:&quot;error&quot;,hideAfter:2,showCloseButton:true});	
 },
 
 buttonA1_click:function($event){
 	var uur = $params.URL.url;
-	$img_view = $(&quot;&lt;img/>&quot;);
-	$img_view.attr(&quot;src&quot;,uur);
-	$('#img_id').empty().append($img_view);
-	$view.divView.toggle();
+	/*$img_view = $(&quot;&lt;img/>&quot;);
+	$img_view.attr(&quot;src&quot;,uur);*/
+	$('#img_id1').empty().attr(&quot;src&quot;,uur);
+	$view.divView1.toggle();
 }</form:scripts>
   <form:htmls>
-&lt;script type=&quot;text/ng-template&quot; id=&quot;divView_html&quot;>
-	&lt;img id=&quot;img_id&quot; height=&quot;240&quot; width=&quot;320&quot; />
+&lt;script type=&quot;text/ng-template&quot; id=&quot;divView1_html&quot;>
+	&lt;img id=&quot;img_id1&quot; height=&quot;240&quot; width=&quot;320&quot; />
 &lt;/script></form:htmls>
 </form:Form>
