--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_getCompanyFile.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_getCompanyFile.form
@@ -536,6 +536,7 @@ view:function(rowObject){
 
 buttonUp_click:function($event){
 	Modal.open(&quot;f/companyAttched_dlg&quot;,{&quot;info&quot;:$params.info},function(){
+	$view.cutom_join_file.refresh();
 	});
 }</form:scripts>
   <form:htmls>
