--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_levelCheck.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_levelCheck.form
@@ -26,7 +26,7 @@
         <dync:render/>
         <dync:children/>
       </dync:attribute>
-      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="">
+      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="page_beforeDataSourceLoad($params)">
         <dync:render/>
         <dync:children/>
       </dync:attribute>
@@ -1145,5 +1145,18 @@ button2_click:function($event){
 	window.parent.angular.element(&quot;#indexConScope&quot;).scope().shippperid =ob[0].shipper_lineid;
 	functions.newTabop(url,title);
 	return;
+},
+
+page_beforeDataSourceLoad:function($params){
+	 var w=window.parent.document.getElementsByTagName(&quot;div&quot;);
+  var $w=$(w);
+  var $thisIf = $(window.parent.document.getElementsByTagName(&quot;iframe&quot;));
+  $thisIf.each(function(index, el) {
+    var strsrc = $(this).attr('src');
+    if (strsrc.indexOf('tps/') != -1) {
+        console.log('find');
+        $(this).parent().parent().attr('style','padding-top:0px !important;');
+      }
+  });	
 }</form:scripts>
 </form:Form>
