--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_levelchange_reson.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_levelchange_reson.form
@@ -30,7 +30,7 @@
         <dync:render/>
         <dync:children/>
       </dync:attribute>
-      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="">
+      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="page_beforeDataSourceLoad($params)">
         <dync:render/>
         <dync:children/>
       </dync:attribute>
@@ -368,6 +368,19 @@ var ob=$view.list.getSelectDatas();&#xD;
 	Modal.open(&quot;f/reasonEdit&quot;,{&quot;DataList&quot;:DataList,&quot;data&quot;:data},function($params){&#xD;
 	$view.list.refresh();&#xD;
 		});
+},
+
+page_beforeDataSourceLoad:function($params){
+	 var w=window.parent.document.getElementsByTagName(&quot;div&quot;);&#xD;
+  var $w=$(w);&#xD;
+  var $thisIf = $(window.parent.document.getElementsByTagName(&quot;iframe&quot;));&#xD;
+  $thisIf.each(function(index, el) {&#xD;
+    var strsrc = $(this).attr('src');&#xD;
+    if (strsrc.indexOf('tps/') != -1) {&#xD;
+        console.log('find');&#xD;
+        $(this).parent().parent().attr('style','padding-top:0px !important;');&#xD;
+      }&#xD;
+  });	
 }</form:scripts>
   <form:htmls>&lt;script type=&quot;text/ng-template&quot; id=&quot;div_html&quot;>
 &lt;h1 align=&quot;center&quot;>分级调整原因维护&lt;/h1>
