--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_mainQuotationAdd.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_mainQuotationAdd.form
@@ -2179,7 +2179,16 @@ btnremove_click:function($event){
 },
 
 page_beforeDataSourceLoad:function($params){
-	
+	 var w=window.parent.document.getElementsByTagName(&quot;div&quot;);
+  var $w=$(w);
+  var $thisIf = $(window.parent.document.getElementsByTagName(&quot;iframe&quot;));
+  $thisIf.each(function(index, el) {
+    var strsrc = $(this).attr('src');
+    if (strsrc.indexOf('tps/') != -1) {
+        console.log('find');
+        $(this).parent().parent().attr('style','padding-top:0px !important;');
+      }
+  });	
 },
 
 //增加支付方式列表
