--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_mainQuotationCheck.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_mainQuotationCheck.form
@@ -26,7 +26,7 @@
         <dync:render/>
         <dync:children/>
       </dync:attribute>
-      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="">
+      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="page_beforeDataSourceLoad($params)">
         <dync:render/>
         <dync:children/>
       </dync:attribute>
@@ -1110,5 +1110,18 @@ refreshdata:function(){
 page_onload:function(){
 	//$view.divsearch.toggle();
 	functions.refreshdata()
+},
+
+page_beforeDataSourceLoad:function($params){
+	 var w=window.parent.document.getElementsByTagName(&quot;div&quot;);
+  var $w=$(w);
+  var $thisIf = $(window.parent.document.getElementsByTagName(&quot;iframe&quot;));
+  $thisIf.each(function(index, el) {
+    var strsrc = $(this).attr('src');
+    if (strsrc.indexOf('tps/') != -1) {
+        console.log('find');
+        $(this).parent().parent().attr('style','padding-top:0px !important;');
+      }
+  });	
 }</form:scripts>
 </form:Form>
