--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_quotation_audit_set.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_quotation_audit_set.form
@@ -30,7 +30,7 @@
         <dync:render/>
         <dync:children/>
       </dync:attribute>
-      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="">
+      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="page_beforeDataSourceLoad($params)">
         <dync:render/>
         <dync:children/>
       </dync:attribute>
@@ -448,5 +448,18 @@ list_beforeProcessing:function(data,status,xhr){
 		data.contents[i].type=obj;
 		data.contents[i].flowid=ob;
 	}
+},
+
+page_beforeDataSourceLoad:function($params){
+		 var w=window.parent.document.getElementsByTagName(&quot;div&quot;);
+  var $w=$(w);
+  var $thisIf = $(window.parent.document.getElementsByTagName(&quot;iframe&quot;));
+  $thisIf.each(function(index, el) {
+    var strsrc = $(this).attr('src');
+    if (strsrc.indexOf('tps/') != -1) {
+        console.log('find');
+        $(this).parent().parent().attr('style','padding-top:0px !important;');
+      }
+  });
 }</form:scripts>
 </form:Form>
