--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_shipperEdit.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_shipperEdit.form
@@ -16,6 +16,12 @@
         </dync:render>
         <dync:children/>
       </dync:attribute>
+      <dync:attribute default="" group="事件" id="beforeDataSourceLoad" name="数据源加载前" value="page_beforeDataSourceLoad($params)">
+        <dync:render colSpan="2" height="0" multi="false" name="event">
+          <dync:item name="param" value="$params"/>
+        </dync:render>
+        <dync:children/>
+      </dync:attribute>
     </form:attributes>
   </form:control>
   <form:child xsi:type="form:Group" id="div1" name="简单容器(DIV)">
@@ -185,5 +191,18 @@ btnsave_click:function($event){
 		return;
      });
      
+},
+
+page_beforeDataSourceLoad:function($params){
+		 var w=window.parent.document.getElementsByTagName(&quot;div&quot;);
+  var $w=$(w);
+  var $thisIf = $(window.parent.document.getElementsByTagName(&quot;iframe&quot;));
+  $thisIf.each(function(index, el) {
+    var strsrc = $(this).attr('src');
+    if (strsrc.indexOf('tps/') != -1) {
+        console.log('find');
+        $(this).parent().parent().attr('style','padding-top:0px !important;');
+      }
+  });
 }</form:scripts>
 </form:Form>
