--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_auditCompang.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_auditCompang.form
@@ -509,7 +509,7 @@
             <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
             <dync:children/>
           </dync:attribute>
-          <dync:attribute default="" group="排序" id="sortname" name="排序列" value="lineId">
+          <dync:attribute default="" group="排序" id="sortname" name="排序列" value="createTime">
             <dync:render colSpan="1" height="0" multi="false" name="text"/>
             <dync:children/>
           </dync:attribute>
@@ -671,6 +671,10 @@
         <form:control type="widget/col_jqgrid">
           <form:attributes source="widget/col_jqgrid">
             <dync:attribute default="false" group="表格设置" id="hidden" name="隐藏列" value="true">
+              <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
+              <dync:children/>
+            </dync:attribute>
+            <dync:attribute default="false" group="表格设置" id="sortable" name="排序" value="true">
               <dync:render colSpan="1" height="0" multi="false" name="checkbox"/>
               <dync:children/>
             </dync:attribute>
