--- a/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_shipperInformation.form
+++ b/src/main/webapp/WEB-INF/c2/platform/com/unlcn/ils/tps/f_shipperInformation.form
@@ -239,7 +239,7 @@
           <form:attributes source="container/toolbar_table"/>
         </form:control>
       </form:child>
-      <form:child xsi:type="form:Field" binding="ownertype" id="ownertype" name="账户类型" customize="true">
+      <form:child xsi:type="form:Field" binding="ownerType" id="ownertype" name="账户类型" customize="true">
         <form:control type="widget/col_jqgrid">
           <form:attributes source="widget/col_jqgrid"/>
         </form:control>
@@ -257,19 +257,19 @@
         </form:control>
         <form:validation/>
       </form:child>
-      <form:child xsi:type="form:Field" binding="accountnumber" id="accountnumber" name="账号" customize="true">
+      <form:child xsi:type="form:Field" binding="accountNumber" id="accountnumber" name="账号" customize="true">
         <form:control type="widget/col_jqgrid">
           <form:attributes source="widget/col_jqgrid"/>
         </form:control>
         <form:validation/>
       </form:child>
-      <form:child xsi:type="form:Field" binding="ownername" id="ownername" name="开户人" customize="true">
+      <form:child xsi:type="form:Field" binding="ownerName" id="ownername" name="开户人" customize="true">
         <form:control type="widget/col_jqgrid">
           <form:attributes source="widget/col_jqgrid"/>
         </form:control>
         <form:validation/>
       </form:child>
-      <form:child xsi:type="form:Field" binding="descs" id="descs" name="备注" customize="true">
+      <form:child xsi:type="form:Field" binding="desc" id="descs" name="备注" customize="true">
         <form:control type="widget/col_jqgrid">
           <form:attributes source="widget/col_jqgrid"/>
         </form:control>
@@ -727,7 +727,7 @@
   <form:scripts>
 page_onload:function(){
 	var shippperid=window.parent.angular.element(&quot;#indexConScope&quot;).scope().shippperid;
-	//var shippperid=3270;
+	//var shippperid=3330;
 	$params.shipper_lineid=shippperid;
 	$http.post(&quot;ws/s_getinfo&quot;,{&quot;shippperid&quot;:$params.shipper_lineid})
 		.success(function(data){ 
